# fudoumyouou

./: .gitignore  EDA.ipynb  GISProcessing.ipynb  LinearModel.ipynb  Model.ipynb  POICollector.ipynb  README.md  TreeModel.ipynb  XGBModel.ipynb  data_cleaning.ipynb  debug.py  docker-compose.yml  google_api.ipynb  pyproject.toml
domus_analytica/: cli.py  config.py  constants.py  data_clean.py  geopoint.py  spider.py
domus_analytica/cli/: __init__.py  suumo.py  trading_record.py
domus_analytica/cli/gis_import/: bus_stop.py  mafia.py  poi_collector.py  population.py  station_passengers.py
domus_analytica/cli/trading/: api.py
